@startuml
title Create Support Ticket - Model Class Diagram

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 0
skinparam dpi 170
skinparam defaultFontName Arial
skinparam classFontName Arial
skinparam classAttributeFontName Consolas
skinparam classAttributeIconSize 0
skinparam classBorderColor #263238
skinparam classBackgroundColor #FAFCFD
skinparam classHeaderBackgroundColor #DCEEF8
skinparam ArrowColor #263238
skinparam ArrowThickness 1.2
skinparam linetype ortho
skinparam nodesep 160
skinparam ranksep 140
hide circle

class Booking <<model>> {
  -id: String {UUID}
  -userId: String
  -status: BookingStatus = PENDING_PAYMENT
  -createdAt: DateTime
  --
  +isPaid(): Boolean
  +isRefundable(at: DateTime): Boolean
}

class SupportTicket <<model>> {
  -id: String {UUID}
  -userId: String
  -bookingId: String [0..1]
  -subject: String
  -description: String
  -status: SupportStatus = OPEN
  -priority: SupportPriority = NORMAL
  -createdAt: DateTime
  --
  {static} +open(userId: String, subject: String, priority: SupportPriority): SupportTicket
}

class SupportMessage <<model>> {
  -id: String {UUID}
  -ticketId: String
  -senderId: String
  -message: String
  -createdAt: DateTime
  --
  {static} +post(ticketId: String, senderId: String, message: String): SupportMessage
}

SupportTicket "1" *-- "0..*" SupportMessage : messages
Booking "0..1" -- "0..*" SupportTicket : supportTickets

@enduml
